<resources>
    <string name="app_name">MonChat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">mobilechatsystem@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="txt_language">Language - Ngôn ngữ</string>
    <string name="txt_theme">Theme</string>
    <string name="txt_please_wait">Please wait...</string>

    <string name="txt_username_or_email">Username or email</string>
    <string name="txt_password">Password</string>
    <string name="txt_signin">Sign in</string>
    <string name="txt_signup">Sign up</string>
    <string name="txt_login_with_facebook">Login with Facebook</string>
    <string name="txt_signin_with_google">Sign in with Google</string>
    <string name="txt_logout">Log out</string>
    <string name="txt_registration">Registration</string>
    <string name="txt_username">Username</string>
    <string name="txt_email">Email</string>
    <string name="txt_confirm_password">Confirm password</string>
    <string name="txt_register">Register</string>
    <string name="txt_username_is_required">Username is required</string>
    <string name="txt_email_is_required">Email is required</string>
    <string name="txt_password_is_required">Password is required</string>
    <string name="txt_confirm_password_is_required">Confirm password is required</string>
    <string name="txt_confirm_password_is_invalid">Confirm password is invalid</string>
    <string name="txt_email_is_invalid">Email is invalid</string>
    <string name="txt_email_is_short">Email is short</string>
    <string name="txt_email_is_long">Email is long</string>
    <string name="txt_username_is_short">Username is short</string>
    <string name="txt_username_is_long">Username is long</string>
    <string name="txt_new_group">New group</string>
    <string name="txt_new_secret_chat">New secret chat</string>
    <string name="txt_new_chanel">New chanel</string>
    <string name="txt_contact">Contact</string>
    <string name="txt_saved_message">Saved message</string>
    <string name="txt_calls">Calls</string>
    <string name="txt_invite_friends">Invite Friends</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_server_error">Server error!</string>
    <string name="txt_enter_search_text">Enter search text</string>
    <string name="txt_new_message">New message</string>
    <string name="txt_create_new_message">Create new message</string>
    <string name="txt_merchant">Merchant</string>
    <string name="txt_about">About</string>
    <string name="title_activity_maps">Map</string>
    <string name="txt_to_use_this_function_you_need_to_grant_location_permission">To use this function you need to grant location permission</string>
    <string name="txt_first_name">First name</string>
    <string name="txt_last_name">Last name</string>
    <string name="txt_mobile_phone">Mobile phone</string>
    <string name="txt_save">Save</string>
    <string name="txt_share_monchat">Share MonChat...</string>
    <string name="txt_chat_ptop">Chat</string>
    <string name="txt_enter_message">Enter message</string>
    <string name="txt_send">Send</string>
    <string name="txt_empty_list">Hãy bắt đầu trò chuyện cùng bạn bè!</string>
</resources>
