<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_all"
        android:layout_centerInParent="true"
        >


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_dtitle"
            android:padding="@dimen/padding_all"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_logo" />

        <EditText
            android:id="@+id/editText_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_username_or_email"
            android:ems="10"
            android:textSize="@dimen/text_normal"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editText_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_password"
            android:textSize="@dimen/text_normal"
            android:inputType="textPassword" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_all"></View>
        <Button
            android:id="@+id/button_login_signin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/border_roundrect_fill_color"
            android:textSize="@dimen/text_normal"
            android:text="@string/txt_signin" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_all"></View>
        <Button
            android:id="@+id/button_login_signup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/border_roundrect_fill_white"
            android:textSize="@dimen/text_normal"
            android:text="@string/txt_signup" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"></View>
        <Button
            android:id="@+id/button_login_with_facebook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"
            android:paddingLeft="@dimen/padding_all"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/ic_facebook"
            android:background="@drawable/border_roundrect_fill_facebook"
            android:textSize="@dimen/text_normal"
            android:text="@string/txt_login_with_facebook" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_all"></View>
        <Button
            android:id="@+id/button_login_with_google"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"
            android:paddingLeft="@dimen/padding_all"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/ic_google"
            android:background="@drawable/border_roundrect_fill_google"
            android:textSize="@dimen/text_normal"
            android:text="@string/txt_signin_with_google" />
    </LinearLayout>
</RelativeLayout>